# easydict

./: .gitignore  .travis.yml  CHANGES  MANIFEST.in  README.rst  README.txt  setup.cfg  setup.py
.github/workflows/: test.yml
easydict/: __init__.py
monkeydict/: __init__.py
