[metadata]
name = easydict
version = 1.3
summary = Access dict values as attributes (works recursively)
home_page = https://github.com/makinacorpus/easydict
author = Mathieu Leplatre
author_email = mathieu.leplatre@makina-corpus.com
description-file = README.rst
platform = any
classifier = Topic :: Utilities
    Natural Language :: English
    Operating System :: OS Independent
    Intended Audience :: Developers
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 2.5
provides-dist = easydict

[files]
packages = easydict
extra_files = README.rst
